Adding service worker

--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
 <script>
+  // Registering Service Worker
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/open-aac/sw.js');
+  }	
   $( function() {
 	var name = $("#name");
 	var addMessageOrFolderDialog = $("#addMessageOrFolderDialog").dialog({
