--- a/index.html
+++ b/index.html
@@ -678,6 +678,8 @@ value: ())
 		<fieldset>
 			<label for="name">Name</label>
 			<input type="text" name="name" id="name" class="text ui-widget-content ui-corner-all">
+			<label for="itemPhoto">Picture</label>
+			<img name="itemPhoto" /><button name="uploadPhoto">Browse</button> 
 			<!-- Allow form submission with keyboard without duplicating the dialog button -->
 			<input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
 		</fieldset>
