--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@ value: ())
 	<form>
 		<fieldset>
 			<label for="name">Name</label>
-			<input type="text" name="name" id="name" class="text ui-widget-content ui-corner-all">
+			<input type="text" name="name" id="name" class="text ui-widget-content ui-corner-all" style="margin-bottom: 20px">
 			<label for="itemPhoto">Picture</label>
 			<img name="itemPhoto" /><button name="uploadPhoto">Browse</button> 
 			<!-- Allow form submission with keyboard without duplicating the dialog button -->
