--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ class Tree {
 	var newItem = {};
 	newItem.name = $("#name").val();
 	newItem.type = globalSettings.lastAction == InteractionType.Folder ? 'folder' : 'message';
-	document.querySelector('#upload-files').files && Array.from(document.querySelector('#upload-files').files).forEach(voiceFile => {
+	document.querySelector('#upload-files').files && Array.from(document.querySelector('#uploadItemPhoto').files).forEach(voiceFile => {
           toBase64(voiceFile).then(base64VoiceFile => {
             newItem.image = base64VoiceFile;
             console.log(base64VoiceFile);        	
@@ -683,7 +683,7 @@ value: ())
 			<label for="name">Name</label>
 			<input type="text" name="name" id="name" class="text ui-widget-content ui-corner-all" style="margin-bottom: 20px">
 			<label for="itemPhoto">Picture</label>
-			<img name="itemPhoto" /><input type="file" multiple=true id="uploadItemPhoto" onchange='uploadPicture(event)' style="margin-left: 10px">Browse</input> 
+			<img name="itemPhoto" /><input type="file" multiple=true id="uploadItemPhoto" style="margin-left: 10px"/>
 			<!-- Allow form submission with keyboard without duplicating the dialog button -->
 			<input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
 		</fieldset>
