--- a/index.html
+++ b/index.html
@@ -377,8 +377,8 @@ class Tree {
 	var newItem = {};
 	newItem.name = $("#name").val();
 	newItem.type = globalSettings.lastAction == InteractionType.Folder ? 'folder' : 'message';
-	document.querySelector('#upload-files').files && Array.from(document.querySelector('#uploadItemPhoto').files).forEach(voiceFile => {
-          toBase64(voiceFile).then(base64VoiceFile => {
+	document.querySelector('#uploadItemPhoto').files && Array.from(document.querySelector('#uploadItemPhoto').files).forEach(pictureFile => {
+          toBase64(pictureFile).then(base64VoiceFile => {
             newItem.image = base64VoiceFile;
             console.log(base64VoiceFile);        	
           });      
