--- a/index.html
+++ b/index.html
@@ -378,7 +378,8 @@ class Tree {
 	document.querySelector('#uploadItemPhoto').files && Array.from(document.querySelector('#uploadItemPhoto').files).forEach(pictureFile => {
           picUploadPromise = toBase64(pictureFile).then(base64VoiceFile => {
             return base64VoiceFile;
-            console.log(base64VoiceFile);        	
+            console.log(base64VoiceFile);
+	    document.querySelector('#uploadItemPhoto').value='';
           });      
         });
 	if (!picUploadPromise){
@@ -695,7 +696,7 @@ value: ())
 			<label for="name">Name</label>
 			<input type="text" name="name" id="name" class="text ui-widget-content ui-corner-all" style="margin-bottom: 20px">
 			<label for="itemPhoto">Picture</label>
-			<img name="itemPhoto" /><input type="file" multiple=true id="uploadItemPhoto" style="margin-left: 10px"/>
+			<img name="itemPhoto" /><input type="file" id="uploadItemPhoto" style="margin-left: 10px"/>
 			<!-- Allow form submission with keyboard without duplicating the dialog button -->
 			<input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
 		</fieldset>
