--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ class Tree {
     var li = createItemLi(item);
     var liElement = document.createTextNode(item.name);
     if (item.image && item.image !== "No picture"){
-      li.style.backgroundImage = item.image;
+      li.style.backgroundImage = 'url(' + item.image + ')';
     }
     li.appendChild(liElement);	  
     ul.appendChild(li);
