--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   .leaf-item {
     font-weight:bold;
    	background-color:#FDF2E9;
-   	border:1px solid #F0F3F4;
+   	border:2px solid #FDF2E9;
    	box-sizing:border-box;
    	float:left;
    	height:100px;
