--- a/index.html
+++ b/index.html
@@ -440,10 +440,10 @@ class Tree {
   })  
 	
   function addFolderOrMessage(interactionType){
-    //if (globalSettings.currentLevel >= 2 and interactionType is folder){
-      //alert("Only two levels of folders are supported as of now. Please contact sudhakarvm@gmail.com if you need more levels.");
-      //return false; 
-    //}
+    if (globalSettings.currentLevel >= 2 and interactionType == 2){
+      alert("Only two levels of folders are supported as of now. Please contact sudhakarvm@gmail.com if you need more levels.");
+      return false; 
+    }
     globalSettings.lastAction = interactionType;
     $("#addMessageOrFolderDialog").dialog("open");
   }
