--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ class Tree {
   })  
 	
   function addFolderOrMessage(interactionType){
-    if (globalSettings.currentLevel >= 2 and interactionType == 2){
+    if (globalSettings.currentLevel >= 2 && interactionType == 2){
       alert("Only two levels of folders are supported as of now. Please contact sudhakarvm@gmail.com if you need more levels.");
       return false; 
     }
