--- a/index.html
+++ b/index.html
@@ -687,7 +687,8 @@ value: ())
 
 <!-- Footer -->
 <div id="footer-level-1" style="display:none">
-  <a href="https://youtu.be/fJvelltfSwo">Demo video</a>	
+  </br>	
+  <a href="https://youtu.be/fJvelltfSwo" target="_blank">Demo video</a>	
 </div>
 
 <!--table id="main-menu">
