--- a/index.html
+++ b/index.html
@@ -719,8 +719,11 @@ value: ())
 		<fieldset>
 			<label for="name">Name</label>
 			<input type="text" name="name" id="name" class="text ui-widget-content ui-corner-all" style="margin-bottom: 20px">
-			<label for="itemPhoto">Picture</label>
-			<img name="itemPhoto" /><input type="file" id="uploadItemPhoto" style="margin-left: 10px"/>
+			<div style="display: flex">
+			  <label for="itemPhoto">Picture</label>
+			  <input type="file" id="uploadItemPhoto" style="margin-left: 10px"/>
+			</div>
+			<img name="itemPhoto" />
 			<!-- Allow form submission with keyboard without duplicating the dialog button -->
 			<input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
 		</fieldset>
