--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@ value: ())
 			<input type="text" name="name" id="name" class="text ui-widget-content ui-corner-all" style="margin-bottom: 20px">
 			<div style="display: flex">
 			  <label for="itemPhoto">Picture</label>
-			  <input type="file" id="uploadItemPhoto" style="margin-left: 10px" onchange="displayPicture()"/>
+			  <input type="file" id="uploadItemPhoto" style="margin-left: 10px" onchange="displayPicture(event)"/>
 			</div>
 			<img name="itemPhoto" />
 			<!-- Allow form submission with keyboard without duplicating the dialog button -->
