--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@ value: ())
 			  <label for="itemPhoto">Picture</label>
 			  <input type="file" id="uploadItemPhoto" style="margin-left: 10px" onchange="displayPicture(event)"/>
 			</div>
-			<img name="itemPhoto" id="itemPhoto"/>
+			<img name="itemPhoto" id="itemPhoto" styles="width: 50%; height: 50%"/>
 			<!-- Allow form submission with keyboard without duplicating the dialog button -->
 			<input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
 		</fieldset>
