--- a/index.html
+++ b/index.html
@@ -725,9 +725,9 @@ value: ())
 			<input type="text" name="name" id="name" class="text ui-widget-content ui-corner-all" style="margin-bottom: 20px">
 			<div style="display: flex">
 			  <label for="itemPhoto">Picture</label>
-			  <input type="file" id="uploadItemPhoto" style="margin-left: 10px" onchange="displayPicture(event)"/>
+			  <input type="file" id="uploadItemPhoto" style="margin-left: 10px" onchange="displayPicture()"/>
 			</div>
-			<img name="itemPhoto" id="itemPhoto" styles="width: 50%; height: 50%"/>
+			<img name="itemPhoto" id="itemPhoto" style="width: 50%; height: 50%"/>
 			<!-- Allow form submission with keyboard without duplicating the dialog button -->
 			<input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
 		</fieldset>
