--- a/index.html
+++ b/index.html
@@ -652,6 +652,10 @@ value: ())
   function displayPicture(){
     document.querySelector('#uploadItemPhoto').files && Array.from(document.querySelector('#uploadItemPhoto').files).forEach(pictureFile => {
       var image = document.querySelector('#itemPhoto');
+      if (!image){
+        image = document.createElement("img");
+	image.setAttribute("id", "itemPhoto");
+      }
       image.src = URL.createObjectURL(pictureFile);
     });
   }
