--- a/index.html
+++ b/index.html
@@ -449,8 +449,8 @@ class Tree {
 	
   function addFolderOrMessage(interactionType){
     if (globalSettings.currentLevel >= 2 && interactionType == 2){
-      alert("Only two levels of folders are supported as of now. Please contact sudhakarvm@gmail.com if you need more levels.");
-      return false; 
+      alert("Only two levels of folders are supported as of now. It is under development. Please contact sudhakarvm@gmail.com if you need more levels.");
+      //return false; 
     }
     globalSettings.lastAction = interactionType;
     $("#addMessageOrFolderDialog").dialog("open");
