--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ class Tree {
 }
   
   let globalSettings = new Settings();
-  const tree = new Tree(1, 'root');
+  let tree = new Tree(1, 'root');
   let mainMenuMap = new Map();
   let ROOT = {};
   ROOT.name = 'root';
